Improved: more informative exceptions.